--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span id="span1"></span>
         <!-- NAV BUTTON  -->
         <button
-          class="navbar-toggler"
+          class="navbar-toggler "
           type="button"
           data-bs-toggle="offcanvas"
           data-bs-target="#menuLateral"
@@ -72,10 +72,10 @@
             <!-- enlaces redes sociales -->
 
             <div class="d-lg-none align-self-center py-3 ">
-              <a href=""><i class="bi bi-twitter px-2 text-info fs-2"></i></a>
-              <a href=""><i class="bi bi-facebook px-2 text-info fs-2"></i></a>
-              <a href=""><i class="bi bi-github px-2 text-info fs-2"></i></a>
-              <a href=""><i class="bi bi-whatsapp px-2 text-info fs-2"></i></a>
+              <a href=""><i class="bi bi-twitter px-2 fs-2"></i></a>
+              <a href=""><i class="bi bi-facebook px-2  fs-2"></i></a>
+              <a href=""><i class="bi bi-github px-2 fs-2"></i></a>
+              <a href=""><i class="bi bi-whatsapp px-2  fs-2"></i></a>
             </div>
           </div>
         </section>
@@ -84,7 +84,7 @@
     </nav>
 
     </header>
-<main class="">
+<main>
 <div class="row " id="bannertop">
         <div class="col-md-6 shadow-lg mb-5 rounded" id="fondo">
         <h1><strong>Crea tu pagina WEB</strong> </h1>
@@ -102,6 +102,19 @@
       </a>
     </div>    
   </div>
+
+
+  <article class="row">
+<div class="image col-md-6">
+  <img src="assets/responsive.png" style="height: 250px; background-color: aqua;">
+</div>
+<div class="text col-md-6" style="background-color: brown;">
+  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam,
+   necessitatibus odio temporibus beatae voluptatem qui vitae nostrum fugiat, dolore, 
+   ratione eum distinctio molestias quod? Aperiam asperiores enim tenetur architecto.
+</div>
+</article>
+
 
 
     
