class container para la seccion de articulos

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>    
   </div>
 
-
+<section class="container">
   <article class="row">
 <div class="image col-md-6">
   <img src="assets/responsive.png" style="height: 250px; background-color: aqua;">
@@ -114,6 +114,8 @@
    ratione eum distinctio molestias quod? Aperiam asperiores enim tenetur architecto.
 </div>
 </article>
+</section>
+
 
 
 
