--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
     <link rel="icon" href="assets/icono.ico">
-    <script src="index.js"></script>
+    
   </head>
  
   <body class="container-fluid">
@@ -103,23 +103,114 @@
     </div>    
   </div>
 
-<section class="container">
-  <article class="row">
-<div class="image col-md-6">
-  <img src="assets/responsive.png" style="height: 300px; background-color: aqua;">
+
+
+<H1>mostrar elementos en scroll</H1>
+
+<div class="lorem">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati facere vel debitis, eius ratione quisquam ex libero adipisci magnam, in nemo aliquam vitae at, earum sit nam dignissimos ipsa?
+Deserunt deleniti nihil adipisci ipsum eius illo quos eum quas dolorum error distinctio voluptate repudiandae nemo ullam delectus, sed cumque officia nobis. Deleniti laudantium velit minus temporibus dolorum commodi maxime?
+Iure recusandae tempora voluptatem perspiciatis temporibus odit vitae voluptates cupiditate voluptatum? Cumque consectetur soluta odio? Quam, perspiciatis ab rerum similique, porro non fugiat quisquam cumque, repudiandae eligendi nisi! Sit, ipsum.
+Nam nostrum illo ea illum vitae recusandae cum voluptates temporibus. Facilis unde ea illum similique sequi nostrum officia, voluptatibus quam numquam possimus assumenda explicabo alias et laboriosam velit nobis odit?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, error repellendus ratione vitae aspernatur ex, cupiditate voluptatum veniam veritatis adipisci porro quasi ducimus facilis aut quae tempora, sapiente assumenda non?
+Voluptatem ipsam nostrum unde odit nemo quos iusto tempore, delectus ut officiis. Nesciunt soluta quis dolores eligendi tenetur, quasi assumenda porro impedit quas, nulla veritatis similique iure est esse voluptate.
+Expedita, earum, officiis, voluptatem est ab quam minus enim quaerat distinctio pariatur voluptatum! Totam et labore nobis modi, vero illum ratione, vel eaque consequatur voluptatem sed ad provident, quidem distinctio.
+Nesciunt sunt inventore distinctio tenetur dolor beatae minus iusto cum earum eum? Quis tenetur impedit tempora iure a ullam velit modi ratione eaque facere porro harum quia, error quae. Voluptatum!
+Alias, iusto? Ipsum rem ducimus ipsam obcaecati natus esse repellat, hic minus voluptates? Totam impedit molestias neque error magnam voluptas doloremque accusantium reiciendis eos sit! Cumque quisquam fugiat neque. Aliquid.
+Exercitationem id, animi voluptatem vero possimus veritatis velit praesentium sint assumenda earum error, vitae totam eaque similique impedit vel hic? Nulla ad recusandae dolores sit dicta aliquam similique saepe delectus.
+Quasi, totam! Aperiam dolor quaerat quis doloremque cumque a obcaecati sint magni accusantium rem aspernatur fugit delectus reprehenderit fugiat optio recusandae neque molestias est, quam odio ipsum laudantium nam quisquam!
+Voluptatum inventore voluptatibus fugit exercitationem quis error eaque corporis autem, velit nobis. Laudantium voluptas deleniti fuga error non rem maxime alias illo nostrum eligendi vel quasi velit iste, provident suscipit?
 </div>
-<div class="text col-md-6" style="background-color: brown;">
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam,
-   necessitatibus odio temporibus beatae voluptatem qui vitae nostrum fugiat, dolore, 
-   ratione eum distinctio molestias quod? Aperiam asperiores enim tenetur architecto.
-</div>
-</article>
-</section>
+<div class="lorem">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati facere vel debitis, eius ratione quisquam ex libero adipisci magnam, in nemo aliquam vitae at, earum sit nam dignissimos ipsa?
+  Deserunt deleniti nihil adipisci ipsum eius illo quos eum quas dolorum error distinctio voluptate repudiandae nemo ullam delectus, sed cumque officia nobis. Deleniti laudantium velit minus temporibus dolorum commodi maxime?
+  Iure recusandae tempora voluptatem perspiciatis temporibus odit vitae voluptates cupiditate voluptatum? Cumque consectetur soluta odio? Quam, perspiciatis ab rerum similique, porro non fugiat quisquam cumque, repudiandae eligendi nisi! Sit, ipsum.
+  Nam nostrum illo ea illum vitae recusandae cum voluptates temporibus. Facilis unde ea illum similique sequi nostrum officia, voluptatibus quam numquam possimus assumenda explicabo alias et laboriosam velit nobis odit?
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, error repellendus ratione vitae aspernatur ex, cupiditate voluptatum veniam veritatis adipisci porro quasi ducimus facilis aut quae tempora, sapiente assumenda non?
+  Voluptatem ipsam nostrum unde odit nemo quos iusto tempore, delectus ut officiis. Nesciunt soluta quis dolores eligendi tenetur, quasi assumenda porro impedit quas, nulla veritatis similique iure est esse voluptate.
+  Expedita, earum, officiis, voluptatem est ab quam minus enim quaerat distinctio pariatur voluptatum! Totam et labore nobis modi, vero illum ratione, vel eaque consequatur voluptatem sed ad provident, quidem distinctio.
+  Nesciunt sunt inventore distinctio tenetur dolor beatae minus iusto cum earum eum? Quis tenetur impedit tempora iure a ullam velit modi ratione eaque facere porro harum quia, error quae. Voluptatum!
+  Alias, iusto? Ipsum rem ducimus ipsam obcaecati natus esse repellat, hic minus voluptates? Totam impedit molestias neque error magnam voluptas doloremque accusantium reiciendis eos sit! Cumque quisquam fugiat neque. Aliquid.
+  Exercitationem id, animi voluptatem vero possimus veritatis velit praesentium sint assumenda earum error, vitae totam eaque similique impedit vel hic? Nulla ad recusandae dolores sit dicta aliquam similique saepe delectus.
+  Quasi, totam! Aperiam dolor quaerat quis doloremque cumque a obcaecati sint magni accusantium rem aspernatur fugit delectus reprehenderit fugiat optio recusandae neque molestias est, quam odio ipsum laudantium nam quisquam!
+  Voluptatum inventore voluptatibus fugit exercitationem quis error eaque corporis autem, velit nobis. Laudantium voluptas deleniti fuga error non rem maxime alias illo nostrum eligendi vel quasi velit iste, provident suscipit?
+  </div>
+  <div class="lorem">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati facere vel debitis, eius ratione quisquam ex libero adipisci magnam, in nemo aliquam vitae at, earum sit nam dignissimos ipsa?
+    Deserunt deleniti nihil adipisci ipsum eius illo quos eum quas dolorum error distinctio voluptate repudiandae nemo ullam delectus, sed cumque officia nobis. Deleniti laudantium velit minus temporibus dolorum commodi maxime?
+    Iure recusandae tempora voluptatem perspiciatis temporibus odit vitae voluptates cupiditate voluptatum? Cumque consectetur soluta odio? Quam, perspiciatis ab rerum similique, porro non fugiat quisquam cumque, repudiandae eligendi nisi! Sit, ipsum.
+    Nam nostrum illo ea illum vitae recusandae cum voluptates temporibus. Facilis unde ea illum similique sequi nostrum officia, voluptatibus quam numquam possimus assumenda explicabo alias et laboriosam velit nobis odit?
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, error repellendus ratione vitae aspernatur ex, cupiditate voluptatum veniam veritatis adipisci porro quasi ducimus facilis aut quae tempora, sapiente assumenda non?
+    Voluptatem ipsam nostrum unde odit nemo quos iusto tempore, delectus ut officiis. Nesciunt soluta quis dolores eligendi tenetur, quasi assumenda porro impedit quas, nulla veritatis similique iure est esse voluptate.
+    Expedita, earum, officiis, voluptatem est ab quam minus enim quaerat distinctio pariatur voluptatum! Totam et labore nobis modi, vero illum ratione, vel eaque consequatur voluptatem sed ad provident, quidem distinctio.
+    Nesciunt sunt inventore distinctio tenetur dolor beatae minus iusto cum earum eum? Quis tenetur impedit tempora iure a ullam velit modi ratione eaque facere porro harum quia, error quae. Voluptatum!
+    Alias, iusto? Ipsum rem ducimus ipsam obcaecati natus esse repellat, hic minus voluptates? Totam impedit molestias neque error magnam voluptas doloremque accusantium reiciendis eos sit! Cumque quisquam fugiat neque. Aliquid.
+    Exercitationem id, animi voluptatem vero possimus veritatis velit praesentium sint assumenda earum error, vitae totam eaque similique impedit vel hic? Nulla ad recusandae dolores sit dicta aliquam similique saepe delectus.
+    Quasi, totam! Aperiam dolor quaerat quis doloremque cumque a obcaecati sint magni accusantium rem aspernatur fugit delectus reprehenderit fugiat optio recusandae neque molestias est, quam odio ipsum laudantium nam quisquam!
+    Voluptatum inventore voluptatibus fugit exercitationem quis error eaque corporis autem, velit nobis. Laudantium voluptas deleniti fuga error non rem maxime alias illo nostrum eligendi vel quasi velit iste, provident suscipit?
+    </div>
 
+    <div class="contenedor">
+      <div class="caja animado">
+        <h2>titulo 1</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Cumque magnam aspernatur quam quas dolore voluptas corrupti 
+        quos odio eligendi labore cupiditate quae, perferendis facilis aut. 
+        Culpa quos rem voluptates eaque!
+      </div>
+      <div class="caja animado">
+        <h2>titulo 2</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Cumque magnam aspernatur quam quas dolore voluptas corrupti 
+        quos odio eligendi labore cupiditate quae, perferendis facilis aut. 
+        Culpa quos rem voluptates eaque!
+      </div>
+      <div class="caja animado">
+        <h2>titulo3</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Cumque magnam aspernatur quam quas dolore voluptas corrupti 
+        quos odio eligendi labore cupiditate quae, perferendis facilis aut. 
+        Culpa quos rem voluptates eaque!
+      </div>
+      <div class="caja animado">
+        <h2>titulo4</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Cumque magnam aspernatur quam quas dolore voluptas corrupti 
+        quos odio eligendi labore cupiditate quae, perferendis facilis aut. 
+        Culpa quos rem voluptates eaque!
+      </div>
 
-
+      <div class="lorem">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati facere vel debitis, eius ratione quisquam ex libero adipisci magnam, in nemo aliquam vitae at, earum sit nam dignissimos ipsa?
+        Deserunt deleniti nihil adipisci ipsum eius illo quos eum quas dolorum error distinctio voluptate repudiandae nemo ullam delectus, sed cumque officia nobis. Deleniti laudantium velit minus temporibus dolorum commodi maxime?
+        Iure recusandae tempora voluptatem perspiciatis temporibus odit vitae voluptates cupiditate voluptatum? Cumque consectetur soluta odio? Quam, perspiciatis ab rerum similique, porro non fugiat quisquam cumque, repudiandae eligendi nisi! Sit, ipsum.
+        Nam nostrum illo ea illum vitae recusandae cum voluptates temporibus. Facilis unde ea illum similique sequi nostrum officia, voluptatibus quam numquam possimus assumenda explicabo alias et laboriosam velit nobis odit?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, error repellendus ratione vitae aspernatur ex, cupiditate voluptatum veniam veritatis adipisci porro quasi ducimus facilis aut quae tempora, sapiente assumenda non?
+        Voluptatem ipsam nostrum unde odit nemo quos iusto tempore, delectus ut officiis. Nesciunt soluta quis dolores eligendi tenetur, quasi assumenda porro impedit quas, nulla veritatis similique iure est esse voluptate.
+        Expedita, earum, officiis, voluptatem est ab quam minus enim quaerat distinctio pariatur voluptatum! Totam et labore nobis modi, vero illum ratione, vel eaque consequatur voluptatem sed ad provident, quidem distinctio.
+        Nesciunt sunt inventore distinctio tenetur dolor beatae minus iusto cum earum eum? Quis tenetur impedit tempora iure a ullam velit modi ratione eaque facere porro harum quia, error quae. Voluptatum!
+        Alias, iusto? Ipsum rem ducimus ipsam obcaecati natus esse repellat, hic minus voluptates? Totam impedit molestias neque error magnam voluptas doloremque accusantium reiciendis eos sit! Cumque quisquam fugiat neque. Aliquid.
+        Exercitationem id, animi voluptatem vero possimus veritatis velit praesentium sint assumenda earum error, vitae totam eaque similique impedit vel hic? Nulla ad recusandae dolores sit dicta aliquam similique saepe delectus.
+        Quasi, totam! Aperiam dolor quaerat quis doloremque cumque a obcaecati sint magni accusantium rem aspernatur fugit delectus reprehenderit fugiat optio recusandae neque molestias est, quam odio ipsum laudantium nam quisquam!
+        Voluptatum inventore voluptatibus fugit exercitationem quis error eaque corporis autem, velit nobis. Laudantium voluptas deleniti fuga error non rem maxime alias illo nostrum eligendi vel quasi velit iste, provident suscipit?
+        </div>
+        <div class="lorem">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur obcaecati facere vel debitis, eius ratione quisquam ex libero adipisci magnam, in nemo aliquam vitae at, earum sit nam dignissimos ipsa?
+          Deserunt deleniti nihil adipisci ipsum eius illo quos eum quas dolorum error distinctio voluptate repudiandae nemo ullam delectus, sed cumque officia nobis. Deleniti laudantium velit minus temporibus dolorum commodi maxime?
+          Iure recusandae tempora voluptatem perspiciatis temporibus odit vitae voluptates cupiditate voluptatum? Cumque consectetur soluta odio? Quam, perspiciatis ab rerum similique, porro non fugiat quisquam cumque, repudiandae eligendi nisi! Sit, ipsum.
+          Nam nostrum illo ea illum vitae recusandae cum voluptates temporibus. Facilis unde ea illum similique sequi nostrum officia, voluptatibus quam numquam possimus assumenda explicabo alias et laboriosam velit nobis odit?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, error repellendus ratione vitae aspernatur ex, cupiditate voluptatum veniam veritatis adipisci porro quasi ducimus facilis aut quae tempora, sapiente assumenda non?
+          Voluptatem ipsam nostrum unde odit nemo quos iusto tempore, delectus ut officiis. Nesciunt soluta quis dolores eligendi tenetur, quasi assumenda porro impedit quas, nulla veritatis similique iure est esse voluptate.
+          Expedita, earum, officiis, voluptatem est ab quam minus enim quaerat distinctio pariatur voluptatum! Totam et labore nobis modi, vero illum ratione, vel eaque consequatur voluptatem sed ad provident, quidem distinctio.
+          Nesciunt sunt inventore distinctio tenetur dolor beatae minus iusto cum earum eum? Quis tenetur impedit tempora iure a ullam velit modi ratione eaque facere porro harum quia, error quae. Voluptatum!
+          Alias, iusto? Ipsum rem ducimus ipsam obcaecati natus esse repellat, hic minus voluptates? Totam impedit molestias neque error magnam voluptas doloremque accusantium reiciendis eos sit! Cumque quisquam fugiat neque. Aliquid.
+          Exercitationem id, animi voluptatem vero possimus veritatis velit praesentium sint assumenda earum error, vitae totam eaque similique impedit vel hic? Nulla ad recusandae dolores sit dicta aliquam similique saepe delectus.
+          Quasi, totam! Aperiam dolor quaerat quis doloremque cumque a obcaecati sint magni accusantium rem aspernatur fugit delectus reprehenderit fugiat optio recusandae neque molestias est, quam odio ipsum laudantium nam quisquam!
+          Voluptatum inventore voluptatibus fugit exercitationem quis error eaque corporis autem, velit nobis. Laudantium voluptas deleniti fuga error non rem maxime alias illo nostrum eligendi vel quasi velit iste, provident suscipit?
+          </div>
 
     
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
