--- a/index.html
+++ b/index.html
@@ -114,10 +114,16 @@
      </p>
     </div>
 
-    <div class="floating-index col-md-2 ">
-      <h3>indice</h3>
+      <div class="btn-group floating-index col-md-2" role="group">
+        <button type="button" class="btn btn-info  dropdown-toggle fs-3 shadow-lg" data-bs-toggle="dropdown" aria-expanded="false">
+          indice general
+        </button>
+        <ul class="dropdown-menu fs-4 ">
+          <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+          <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+        </ul>
+      </div>
       <!-- Índice flotante -->
-    </div>
   </section> 
 
 
