--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <main>
 <div class="row  " id="bannertop">
         <div class="col-md-6 shadow-lg mb-5 rounded" id="fondo">
-        <h1>Paginas Web y Servicio de Hosting</h1>
+        <h1>Paginas Web y Hosting en Cordoba</h1>
         <h3>al mejor precio del mercado</h3>
         <p>
          En <strong><u>Moon Design</u> </strong> nos encargamos de crear y administrar tu Web<br>
