--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </header>
 <main>
 <div class="row  " id="bannertop">
-        <div class="col-md-6 shadow-lg mb-5 rounded" id="fondo">
+        <div class="col-md-7 shadow-lg mb-5 rounded" id="fondo">
         <h1>Paginas Web y Hosting en Cordoba</h1>
-        <h3>al mejor precio del mercado</h3>
+        <h3>crea tu pagina web</h3>
         <p>
          En <strong><u>Moon Design</u> </strong> nos encargamos de crear y administrar tu Web<br>
         para obtener juntos el mejor resultado para tu Marca.
