--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
         <h3>crea tu pagina web</h3>
         <p>
          En <strong><u>Moon Design</u> </strong> nos encargamos de crear y administrar tu Web<br>
-        para obtener juntos el mejor resultado para tu Marca.
+        para obtener juntos el mejor resultado para tu Marca.<br> Comenzamos?
         </p>
-        <a href="#divider" class=" rounded btn-neon">
+        <a href="#titulo" class=" rounded btn-neon">
           <span id="span1"></span>
           <span id="span2"></span>
           <span id="span3"></span>
           <span id="span4"></span>
-          COMENZAMOS?
+          HAZ CLICK AQUI
       </a>
     </div> 
   </div>
 
-
-  <section class="intro row">
-    <div class="col-md-6">
-      <h2 class="titulo">Tu sitio Web</h2>
+<div class="nada" id="titulo" ></div>
+  <section class="intro row" style="margin-top: 30px;">
+    <div id="intro" class="col-md-6">
+      <h2  class="">Tu sitio Web</h2>
      <p>
       Un sitio web no es solo una revista llena de imagenes y textos, es la identificacion y la cara de tu empresa
       en el mundo digital. En Moon Design nos enfocamos en puntos relevantes de cada rubro en particular,
@@ -138,7 +138,7 @@
 
 <section>
   <article class="articulo row" >
-    <div class="caja animado col-md-6">
+    <div id="intro" class="caja animado col-md-6">
      <h2>Diseño e Identidad</h2>
      <p>
       "Destaca en línea con un diseño web impactante. Nuestro equipo de diseñadores expertos 
@@ -155,7 +155,7 @@
  </article>
   
  <article class="articulo1 row">
-  <div class="caja animado  col-md-6">
+  <div id="intro" class="caja animado  col-md-6">
    <h2>Responsive Design</h2>
    <p>
     "Diseñamos tu sitio web para que se ajuste a todo tipo de dispositivo, 
@@ -173,7 +173,7 @@
 
 
     <article class="articulo2 row">
-       <div class="caja animado  col-md-6">
+       <div id="intro" class="caja animado  col-md-6">
         <h2>SEO y Posicionamiento web</h2>
         <p>
            "Potencia tu presencia en línea con nuestro servicio de SEO. 
@@ -201,7 +201,7 @@
 
 
 <section class="cierre row">
-  <div class="col-md-6">
+  <div id="intro" class="col-md-6">
     <h2 class="titulo">Moon Design</h2>
    <p>
     "Tu socio confiable en el mundo digital: Aprovecha nuestro 
