--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
         <div class="col-md-7 shadow-lg mb-5 rounded" id="fondo">
         <h1>Paginas Web y Hosting en Cordoba</h1>
         <h3>crea tu pagina web</h3>
-        <p>
-         En <strong><u>Moon Design</u> </strong> nos encargamos de crear y administrar tu Web<br>
-        para obtener juntos el mejor resultado para tu Marca.<br> Comenzamos?
-        </p>
+        <p> 
+          Creamos y administramos tu web para obtener juntos el mejor resultado
+       </p>
         <a href="#titulo" class=" rounded btn-neon">
           <span id="span1"></span>
           <span id="span2"></span>
