edit banner 1ra parte

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </header>
 <main>
 <div class="row  " id="bannertop">
-        <div class="col-md-7 shadow-lg mb-5 rounded" id="fondo">
+        <div class="col-md-7 " id="fondo">
         <h1>Paginas Web y Hosting en Cordoba</h1>
-        <h3>crea tu pagina web</h3>
+        <h3 style="color: black;">crea tu pagina web</h3>
         <p> 
           Creamos y administramos tu web para obtener juntos el mejor resultado
        </p>
