--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h1>Paginas Web y Hosting en Cordoba</h1>
         <h3 style="color: black;">crea tu pagina web</h3>
         <p> 
-          Creamos y administramos tu web para obtener juntos el mejor resultado
+          Creamos y administramos tu sitio web para obtener juntos el mejor resultado
        </p>
         <a href="#titulo" class=" rounded btn-neon">
           <span id="span1"></span>
@@ -226,7 +226,7 @@
   <div class="startup col-md-3 floating-index" id="floating-2">
   <p>
     <button class="btn btn-info fs-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-      Ofertas para vos¡¡
+      !Ofertas para vos¡
     </button>
   </p>
   <div >
@@ -234,6 +234,13 @@
       <div class="card card-body" style="width: 250px;">
         Si tenes o estas iniciando una StartUp pero no tenes presupuesto
         para tu web, tenemos algo para vos¡
+        <a href="#" class="btn btn-info" style="margin-top: 15px;">click aqui</a>
+      </div>
+    </div>
+
+    <div class="collapse collapse-horizontal" id="collapseWidthExample">
+      <div class="card card-body" style="width: 250px;">
+        No te gusta tu sitio web o no aparece en los resultados de busqueda y queres mejorarlo?  
         <a href="#" class="btn btn-info" style="margin-top: 15px;">click aqui</a>
       </div>
     </div>
