--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
 
 <!--texto introccion-->
 
-   <section class="intro row">
-
-
+   <section class="intro row" id="">
 
     <div id="intro" class="col-md-6">
       <h2  class="">Las primeras impresiones son importantes</h2>
@@ -115,7 +113,7 @@
 
 <!--que ofrecemos-->
 
-<section class="flayers row">
+<section class="flayers row" id="">
 
 
     <article class="articulo col-lg-3 col-md-3 col-sm-10">
@@ -200,14 +198,13 @@
                 ¿quienes somos?
             </h4>
             <p>
-            Somos una empresa de desarrollo web que nació con el propósito de ayudar a las 
+            Moon Design nació con el propósito de ayudar a las 
             pequeñas empresas a crear su presencia en línea. Con el tiempo, nuestra dedicación 
-            y experiencia nos han llevado a colaborar con grandes empresas, brindando soluciones
-             digitales de alto nivel. Aunque hemos crecido, nuestro enfoque en el éxito de nuestros 
-             clientes sigue siendo el mismo. Nuestro equipo de expertos está comprometido en 
+            y experiencia nos han llevado a colaborar con grandes empresas.<br>
+             Aunque hemos crecido, nuestro enfoque en el éxito de nuestros 
+             clientes sigue siendo el mismo. Estamos comprometidos en 
              proporcionar sitios web personalizados, intuitivos y atractivos que impulsen el 
-             crecimiento de tu negocio. Confía en nosotros para llevar tu presencia en línea al 
-             siguiente nivel, sin importar el tamaño de tu empresa.</p>
+             crecimiento de tu negocio. </p>
         </div>
         <div class="col-md-12" >
             <h4>
@@ -217,9 +214,10 @@
                 Somos apasionados por lo que hacemos. Cada proyecto que asumimos es tratado con el mismo
                  nivel de dedicación y compromiso como si fuera para nosotros mismos. 
                  Nos enorgullece entregar resultados excepcionales, ya que comprendemos la importancia 
-                 de cada detalle para el éxito de tu negocio. Confía en nuestro equipo para brindarte 
-                 soluciones digitales personalizadas y sobrepasar tus expectativas. Tu éxito es nuestro
-                objetivo y nos esforzamos por lograrlo en cada proyecto que emprendemos.
+                 de cada detalle para el éxito de tu negocio. Tu éxito es nuestro
+                objetivo y nos esforzamos por lograrlo en cada proyecto que emprendemos.<br>
+                Confía en nosotros para brindarte soluciones digitales personalizadas y llevar tu presencia en línea al 
+                siguiente nivel, sin importar el tamaño de tu empresa.
             </p>
         </div>
     </div>
@@ -231,7 +229,7 @@
 <section class="row " id="form-consulta" >
 
 
-    <h2 class="text-center p-3">Deseas un presupuesto o sacarte alguna duda?</h2>
+    <h2 class="text-center p-3">Hablemos</h2>
       <p class="text-center">
         Llena el formulario o comunicate por cualquiera de nuestros <a href="contacto.html">canales de contacto</a>
       </p>
