cambio ico de la pagina

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!--icono de pagina-->
-    <link rel="icon" href="assets/icono.ico">
+    <link rel="icon" href="assets/md.png">
 </head>
 <body class="container-fluid">
     <header class="row position-relative mb-5 rounded" id="header">
