verificar y seguir editando

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#" class="nav-link">SERVICIOS</a>
               </li>
               <li class="nav-item p-3 py-md-1">
-                <a href="sobre-nosotros.html" class="nav-link">SOBRE NOSOTROS</a>
+                <a href="#about" class="nav-link">SOBRE NOSOTROS</a>
               </li>
               <li class="nav-item p-3 py-md-1">
                 <a href="" class="nav-link">BLOG</a>
@@ -112,11 +112,11 @@
 <!--flayers-->
 
 <!--que ofrecemos-->
+<div class="container">
+  <section class="flayers row" id="">
 
-<section class="flayers row" id="">
 
-
-    <article class="articulo col-lg-3 col-md-3 col-sm-10">
+    <article class="articulo col-lg-4 col-md-4 col-sm-10">
         <div class="caja animado">
             <div class="text">
                <h5 class="subtitle">
@@ -139,7 +139,7 @@
           </div> 
     </article>
 
-    <article class="articulo1 col-lg-3 col-md-3 col-sm-10">
+    <article class="articulo1 col-lg-4 col-md-4 col-sm-10">
         <div class="caja animadoA ">
             <div class="text">
               <h5 class="subtitle">
@@ -160,7 +160,7 @@
           </div> 
     </article>   
 
-    <article class="articulo2 col-lg-3 col-md-3 col-sm-10">
+    <article class="articulo2 col-lg-4 col-md-4 col-sm-10">
         <div class="caja animadoD ">
             <div class="text">
               <h5 class="subtitle">
@@ -181,16 +181,18 @@
           </div> 
      </article>
 </section>
+</div>
+
 
 <!--quienes somos-->
 
-<section class="nosotros row" >
+<section class="nosotros row" id="about">
 
-   <div class=" img col-md-4 offset-md-1 ">
+   <div class=" img col-md-5  ">
        <img src="assets/logos.gif" class="img-fluid" alt="">
    </div>
-    <div class="texto offset-md-1 col-md-6" >
-        <div class="py-5 col-md-12">
+    <div class="texto col-md-6" >
+        <div class=" col-md-12">
             <h3>
                 Sobre nosotros
             </h3>
@@ -226,13 +228,17 @@
 
 <!--formulario consulta-->
 
-<section class="row " id="form-consulta" >
+<section class="row " id="form-consulta">
 
 
-    <h2 class="text-center p-3">Hablemos</h2>
-      <p class="text-center">
-        Llena el formulario o comunicate por cualquiera de nuestros <a href="contacto.html">canales de contacto</a>
-      </p>
+    <h5 class="">Hablemos</h5>
+      <h3 class="">
+        ¿Tienes un proyecyo en mente?</h3>
+        <p>
+          Si estas listo, escribenos para darle vida. 
+        </p>
+         <a href="contacto.html">Otros canales de contacto</a>
+      
     
 <hr>
    <div class="col-md-3 offset-md-2">
