--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </nav>
     </header>
 
-    <div class="row">
-      <div class="col-md-12">
+    <div class="video">
+      <div class="">
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
           <source src="assets/black_-_13495 (720p).mp4">
         </video>
@@ -134,11 +134,10 @@
 <!--flayers-->
 
 <!--que ofrecemos-->
-<div class="container">
   <section class="flayers row" id="">
 
 
-    <article class="articulo col-lg-4 col-md-4 col-sm-12">
+    <article class="articulo  col-lg-3 col-md-4 col-sm-12">
         <div class="caja animado">
             <div class="text">
                <h5 class="subtitle">
@@ -162,7 +161,7 @@
           </div> 
     </article>
 
-    <article class="articulo1 col-lg-4 col-md-4 col-sm-12">
+    <article class="articulo1 col-lg-3 col-md-4 col-sm-12">
         <div class="caja animadoA ">
             <div class="text">
               <h5 class="subtitle">
@@ -183,7 +182,7 @@
           </div> 
     </article>   
 
-    <article class="articulo2 col-lg-4 col-md-4 col-sm-12">
+    <article class="articulo2 col-lg-3 col-md-4 col-sm-12">
         <div class="caja animadoD ">
             <div class="text">
               <h5 class="subtitle">
@@ -202,7 +201,6 @@
           </div> 
      </article>
 </section>
-</div>
 
 
 <!--quienes somos-->
@@ -263,7 +261,7 @@
     
 <hr>
    <div class="col-md-3 offset-md-2">
-    <img class="img-form" src="assets/contact-us.png" alt="" style="width: 100%; max-width: 500px;">
+    <img class="img-form" src="assets/contact-us.png" alt="contacto" style="width: 100%; max-width: 500px;">
    </div> 
   <div class="col-md-4 offset-md-2 ">
       
