video fondo completo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </nav>
     </header>
 
-    <div class="video">
+    <div class="video row ">
       <div class="">
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
           <source src="assets/black_-_13495 (720p).mp4">
