formulario casi terminado

--- a/index.html
+++ b/index.html
@@ -263,25 +263,27 @@
       
     
 
-  <div class="col-md-6" style="justify-content: center;">
+  <div class="offset-md-1 col-md-4" style="justify-content: center;">
     <img class="img-form img-fluid" src="assets/contact-us.png" alt="contacto" >
    </div> 
   
 
-    <form action="https://formsubmit.co/moondesignweb@gmail.com" method="POST"  class="col-md-6" id="formulario-consulta">
-      <div class="col-md-10"> <label for=""> Nombre</label>
+    <form action="https://formsubmit.co/moondesignweb@gmail.com" method="POST"  
+    class="offset-md-1 col-md-6" id="formulario-consulta">
+      <label for=""> Nombre</label>
+      <div class="col-md-10"> 
         <input type="text"  name="Nombre" id="Nombre" placeholder="">
       </div>
-
-      <div class="col-md-10"> <label for=""> Email</label>
+<label for=""> Email</label>
+      <div class="col-md-10"> 
         <input type="email" name="email" id="email" placeholder="">
       </div>
-
-      <div class="col-md-10"><label for=""> Telefono</label>
+<label for=""> Telefono</label>
+      <div class="col-md-10">
         <input type="number" name="Telefono" id="Telefono" placeholder="">
       </div>
-
-      <div class="col-md-10"><label for=""> Mensaje</label>
+<label for=""> Mensaje</label>
+      <div class="col-md-10">
         <textarea name=" Mensaje " id="Mensaje"  placeholder="Cuentanos sobre tu proyecto:"> </textarea>
       </div>
 
