color, outline y border form

--- a/index.html
+++ b/index.html
@@ -270,20 +270,24 @@
 
     <form action="https://formsubmit.co/moondesignweb@gmail.com" method="POST"  
     class="offset-md-1 col-md-6" id="formulario-consulta">
-      <label for=""> Nombre</label>
+      
       <div class="col-md-10"> 
+        <label for="name"> Nombre</label>
         <input type="text"  name="Nombre" id="Nombre" placeholder="">
       </div>
-<label for=""> Email</label>
+
       <div class="col-md-10"> 
+        <label for="email"> Email</label>
         <input type="email" name="email" id="email" placeholder="">
       </div>
-<label for=""> Telefono</label>
+
       <div class="col-md-10">
+        <label for="number"> Telefono</label>
         <input type="number" name="Telefono" id="Telefono" placeholder="">
       </div>
-<label for=""> Mensaje</label>
+
       <div class="col-md-10">
+        <label for="mensaje"> Mensaje</label>
         <textarea name=" Mensaje " id="Mensaje"  placeholder="Cuentanos sobre tu proyecto:"> </textarea>
       </div>
 
