--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear pagina web</title>
+    <title>Blank File | Crea tu pagina Web</title>
 
     <!--bootstrap-->
 
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-expand-lg ">  
           <div class="container-fluid">
             <img  src="assets/md.gif" alt="moon design" class="logo">
-            <a href="" class="navbar-brand fw-semibold fs-3">Moon Design</a>
+            <a href="" class="navbar-brand fw-semibold fs-3">Blank_file</a>
         <!-- NAV BUTTON  -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#menuLateral">
             <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="dark">
-            <h3 class="offcanvas-title fs-3">Moon Design</h3>
+            <h3 class="offcanvas-title fs-3">Blank_file</h3>
             <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
           </div>
           <!-- OFF CANVAS MENU LINKS  START-->
@@ -119,7 +119,7 @@
       <h2  class="">Las primeras impresiones son importantes</h2>
      <p>
       Un sitio web no es solo una revista llena de imagenes y textos, es la identificacion y la cara de tu empresa
-      en el mundo digital. En Moon Design nos enfocamos en los puntos relevantes de cada rubro en particular,
+      en el mundo digital. En Blank_file nos enfocamos en los puntos relevantes de cada rubro en particular,
      entregando asi, un trabajo especifico para cada empresa pensado en aumentar la visibilidad de su producto o servicio.<br>
      Te contamos a continuacion algunos puntos importantes...
      </p>
@@ -207,11 +207,11 @@
 
 <section class="nosotros row" id="about">
 
-   <div class=" img col-md-5  ">
+   <div class=" img col-md-5 offset-md-1 ">
        <img src="assets/logos.gif" class="img-fluid" alt="">
    </div>
     <div class="texto col-md-6" >
-        <div class=" col-md-12">
+        <div class=" col-md-12 p-5">
             <h3>
                 Sobre nosotros
             </h3>
@@ -219,7 +219,7 @@
                 ¿quienes somos?
             </h4>
             <p>
-            Moon Design nació con el propósito de ayudar a las 
+            Blank_file nació con el propósito de ayudar a
             pequeñas empresas a crear su presencia en línea. Con el tiempo, nuestra dedicación 
             y experiencia nos han llevado a colaborar con grandes empresas.<br>
              Aunque hemos crecido, nuestro enfoque en el éxito de nuestros 
@@ -227,16 +227,16 @@
              proporcionar sitios web personalizados, intuitivos y atractivos que impulsen el 
              crecimiento de tu negocio. </p>
         </div>
-        <div class="col-md-12" >
+        <div class="col-md-12 p-5" >
             <h4>
                Nos apasiona lo que hacemos
             </h4>
             <p>
-                Somos apasionados por lo que hacemos. Cada proyecto que asumimos es tratado con el mismo
-                 nivel de dedicación y compromiso como si fuera para nosotros mismos. 
+                Cada proyecto que asumimos es tratado con el mismo
+                 nivel de dedicación y compromiso como si fuera para nosotros. 
                  Nos enorgullece entregar resultados excepcionales, ya que comprendemos la importancia 
-                 de cada detalle para el éxito de tu negocio. Tu éxito es nuestro
-                objetivo y nos esforzamos por lograrlo en cada proyecto que emprendemos.<br>
+                 de cada detalle para el éxito de tu negocio.<br> Tu éxito es nuestro
+                objetivo, nos esforzamos por lograrlo en cada proyecto.<br>
                 Confía en nosotros para brindarte soluciones digitales personalizadas y llevar tu presencia en línea al 
                 siguiente nivel, sin importar el tamaño de tu empresa.
             </p>
@@ -271,22 +271,22 @@
     <form action="https://formsubmit.co/moondesignweb@gmail.com" method="POST"  
     class="offset-md-1 col-md-6" id="formulario-consulta">
       
-      <div class="col-md-10"> 
+      <div class="col-md-8"> 
         <label for="name"> Nombre</label>
         <input type="text"  name="Nombre" id="Nombre" placeholder="">
       </div>
 
-      <div class="col-md-10"> 
+      <div class="col-md-8"> 
         <label for="email"> Email</label>
         <input type="email" name="email" id="email" placeholder="">
       </div>
 
-      <div class="col-md-10">
+      <div class="col-md-8">
         <label for="number"> Telefono</label>
         <input type="number" name="Telefono" id="Telefono" placeholder="">
       </div>
 
-      <div class="col-md-10">
+      <div class="col-md-8">
         <label for="mensaje"> Mensaje</label>
         <textarea name=" Mensaje " id="Mensaje"  placeholder="Cuentanos sobre tu proyecto:"> </textarea>
       </div>
