--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
 
 <!--quienes somos-->
 
-<section class="nosotros row p-5" id="about">
+<section class="nosotros row py-5" id="about">
 
    <div class=" img col-md-5 offset-md-1 ">
        <img src="assets/logos.gif" class="img-fluid" alt="">
    </div>
     <div class="texto col-md-6" >
-        <div class=" col-md-12 p-5">
+        <div class=" col-md-12 py-5">
             <h3>
                 Sobre nosotros
             </h3>
@@ -227,7 +227,7 @@
              proporcionar sitios web personalizados, intuitivos y atractivos que impulsen el 
              crecimiento de tu negocio. </p>
         </div>
-        <div class="col-md-12 p-5" >
+        <div class="col-md-12 py-5" >
             <h4>
                Nos apasiona lo que hacemos
             </h4>
@@ -244,6 +244,11 @@
     </div>
     
 </section>
+
+<section class="row" id="trabajos">
+     
+</section>
+
 
 <!--formulario consulta-->
 
