--- a/index.html
+++ b/index.html
@@ -249,22 +249,31 @@
 
 <section class=" trabajos row " id="trabajos">
 
-<h2 class="text-center p-5">Trabajos y opiniones</h2>
+  <div class=" col-lg-6 col-md-6 px-5 ">
+    <h5 class="">Nuestros proyectos</h5>
+        <h3 class="py-3">
+          Echa un vistazo<br> a nuestros clientes</h3>
+          <hr>
+          <p class="py-3">
+             Tomate una pausa, ademas de leernos, puedes ver algunos de los proyectos en los que hemos participado recientemente. 
+             <br>
+             La mejor forma de decidir si trabajar con nosotros es viendo nuestro trabajo, <br>
+             lo compartimos y esperamos poder trabajar juntos. 
+          </p>
+          <a href="contacto.html">Ver mas</a>
+  </div>
 
-     <div class="col-md-6 ">
-   
-     </div>
 
-     <div class="col-md-6" style="max-width: 720px;">
+     <div class="col-md-6 py-3 px-5" style="max-width: 1050px;">
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="2000">
+          <div class="carousel-item active" data-bs-interval="5000">
             <img src="assets/omega.png" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item" data-bs-interval="2000">
+          <div class="carousel-item" data-bs-interval="5000">
             <img src="assets/omega.png" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item" data-bs-interval="2000">
+          <div class="carousel-item" data-bs-interval="5000">
             <img src="assets/omega.png" class="d-block w-100" alt="...">
           </div>
         </div>
@@ -277,6 +286,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      
      </div>
 
 </section>
