--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blank_File | Crea tu pagina Web</title>
+    <meta name="description" content="Blank_File | Crearemos una presencia digital única y atractiva que refleje la identidad de tu marca. Contactate">
+    <!--etiquetas og-->
+
+   <meta property="og:title" content="Crea tu pagina web al mejor precio del mercado">
+   <meta property="og:type"content="website">
+   <meta property="og:image"content="https://blankfiledesign.github.io/assets/png/dise%C3%B1amos-2.png">
+   <meta property="og:url"content="https://blankfiledesign.github.io/">
+   <meta property="og:description"content="Creamos y diseñamos tu pagina web para obtener juntos el mejor resultado para tu empresa">
+   <meta property="og:site_name" content="Blank File">
+
+
+    
 
     <!--bootstrap-->
 
