--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
         <h3> 
           Creamos y administramos tu sitio web para obtener juntos el mejor resultado
         </h3>
-        <a href="#titulo" class=" rounded btn-neon">
+        <a href="#form-consulta" class=" rounded btn-neon">
           <span id="span1"></span>
           <span id="span2"></span>
           <span id="span3"></span>
           <span id="span4"></span>
-          CLICK AQUI
+          Contáctate
       </a>
       
     </div> 
