--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 <section class=" trabajos row " id="trabajos">
 
-  <div class=" col-lg-6 col-md-6 px-5 ">
+  <div class=" col-lg-6 col-md-6  ">
     <h5 class="">Nuestros proyectos</h5>
         <h3 class="py-3">
           Echa un vistazo<br> a nuestros clientes</h3>
@@ -289,7 +289,7 @@
   </div>
 
 
-     <div class="col-md-6 py-3 px-5" style="max-width: 1050px;">
+     <div class="col-md-6 py-3 " style="max-width: 1050px;">
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
@@ -321,7 +321,7 @@
 
 <section class="row" id="form-consulta">
 
-<div class=" col-lg-12 col-md-12 px-5">
+<div class=" col-lg-12 col-md-12">
   <h5>Hablemos</h5>
       <h3>
         ¿Tienes un proyecto<br> en mente?</h3>
